--- a/cau-truc_the_html_co_ban/demo/ul_ol_li_tag/tao_menu.html
+++ b/cau-truc_the_html_co_ban/demo/ul_ol_li_tag/tao_menu.html
@@ -5,27 +5,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>tạo menu</title>
     <style>
         ul {
+            background-color:black;
             list-style-type: none;
-            background-color: #333333;
             margin: 0;
             padding: 0;
-            overflow: scroll;
+            overflow: hidden;
         }
 
         ul li {
+            background-color: black;
             border-right: 1px solid white;
             float: left;
         }
 
         ul li a {
-            display: block;
-            ;
             text-decoration: none;
-            color: white;
             padding: 10px;
+            color: red;
         }
     </style>
 </head>
@@ -38,4 +37,5 @@
         <li><a href="#about">About</a></li>
     </ul>
 </body>
+
 </html>
