--- a/CSS RWD/Test/index.html
+++ b/CSS RWD/Test/index.html
@@ -11,18 +11,18 @@
 </head>
 
 <body>
-    <div class="header col-sm-12 col-md-12">1</div>
+    <div class="header col-xs-12 col-sm-12 col-md-12">1</div>
 
-    <div class="hai col-sm-12 col-md-3">2</div>
-    <div class="ba col-sm-9 col-md-6">3</div>
-    <div class="bon col-sm-3 col-md-3">4</div>
+    <div class="hai col-xs-12 col-sm-12 col-md-3">2</div>
+    <div class="ba col-xs-12 col-sm-9 col-md-6">3</div>
+    <div class="bon col-xs-12 col-sm-3 col-md-3">4</div>
 
-    <div class="nam col-sm-6 col-md-3">5</div>
-    <div class="sau col-sm-6 col-md-3">6</div>
-    <div class="bay col-sm-6 col-md-3">7</div>
-    <div class="tam col-sm-6 col-md-3">8</div>
+    <div class="nam col-xs-12 col-sm-6 col-md-3">5</div>
+    <div class="sau col-xs-12 col-sm-6 col-md-3">6</div>
+    <div class="bay col-xs-12 col-sm-6 col-md-3">7</div>
+    <div class="tam col-xs-12 col-sm-6 col-md-3">8</div>
 
-    <div class="footer col-md-12"></div>
+    <div class="footer col-xs-12 col-sm-12  col-md-12"></div>
 
 
 </body>
