--- a/CSS RWD/Test/index.html
+++ b/CSS RWD/Test/index.html
@@ -22,7 +22,7 @@
     <div class="bay col-xs-12 col-sm-6 col-md-3">7</div>
     <div class="tam col-xs-12 col-sm-6 col-md-3">8</div>
 
-    <div class="footer col-xs-12 col-sm-12  col-md-12"></div>
+    <div class="footer col-xs-12 col-sm-12  col-md-12">9</div>
 
 
 </body>
