change "src img"

--- a/Case_study_1/HAIR_STUDIO/index.html
+++ b/Case_study_1/HAIR_STUDIO/index.html
@@ -50,7 +50,7 @@
                 </div>
             </div>
             <div class="feature-img">
-                <img src="/Build_website_with_html_css/Case_study_1/HAIR_STUDIO/img/barber-man.jpg" alt="">
+                <img src="./img/barber-man.jpg" alt="Error">
             </div>
         </div>
     </section>
