--- a/Case_study_1/HAIR_STUDIO/index.html
+++ b/Case_study_1/HAIR_STUDIO/index.html
@@ -11,9 +11,43 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll/dist/smooth-scroll.polyfills.min.js"></script>
 </head>
 
 <body>
+    <!-- banner -->
+    <section id="banner">
+        <img src="./img/logo.png" alt="Ảnh logo" class="logo">
+        <div class="banner-text">
+            <h1>Hair Studio</h1>
+            <p>Style Your Hair Is Style Your Life</p>
+            <div class="banner-btn">
+                <a href="#"><span></span>Find Out</a>
+                <a href="#"><span></span>Read More</a>
+            </div>
+        </div>
+    </section>
+    <!-- end banner -->
+
+    <!-- sideNav -->
+    <section id="sideNav">
+        <nav>
+            <ul>
+                <li><a href="#banner">Home</a></li>
+                <li><a href="#feature">Features</a></li>
+                <li><a href="#service">Services</a></li>
+                <li><a href="#testimonial">Testimonial</a></li>
+                <li><a href="#footer">Meet Us</a></li>
+
+            </ul>
+        </nav>
+    </section>
+    <div id="menuBtn">
+        <img src="./img/menu.png" alt="" id="menu">
+    </div>
+    <!-- end sideNav -->
+
+    <!-- feature -->
     <section id="feature">
         <div class="title-text">
             <p>FEATURES</p>
@@ -54,6 +88,153 @@
             </div>
         </div>
     </section>
+    <!-- end feature -->
+
+    <!-- service -->
+
+    <section id="service">
+        <div class="title-text">
+            <p>SERVICES</p>
+            <h1>We Provider Better</h1>
+        </div>
+        <div class="service-box">
+            <div class="single-service">
+                <img src="./img/pic-1.jpg" alt="">
+                <div class="overlay"></div>
+                <div class="service-desc">
+                    <h3>Beard Trim</h3>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In iaculis dignissim lacus, non vestibulum velit facilisis in.</p>
+                </div>
+            </div>
+            <div class="single-service">
+                <img src="./img/pic-2.jpg" alt="">
+                <div class="overlay"></div>
+                <div class="service-desc">
+                    <h3>Hair Cut</h3>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In iaculis dignissim lacus, non vestibulum velit facilisis in.</p>
+                </div>
+            </div>
+            <div class="single-service">
+                <img src="./img/pic-3.jpg" alt="">
+                <div class="overlay"></div>
+                <div class="service-desc">
+                    <h3>Hair Styling</h3>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In iaculis dignissim lacus, non vestibulum velit facilisis in.</p>
+                </div>
+            </div>
+            <div class="single-service">
+                <img src="./img/pic-4.jpg" alt="">
+                <div class="overlay"></div>
+                <div class="service-desc">
+                    <h3>Dry Shapoo</h3>
+                    <hr>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In iaculis dignissim lacus, non vestibulum velit facilisis in.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- end service -->
+
+    <!-- testimonial -->
+
+    <section id="testimonial">
+        <div class="title-text">
+            <p>TESTIMONIAL</p>
+            <h1>What Client Says</h1>
+        </div>
+        <div class="testimonial-row">
+            <div class="testimonial-col">
+                <div class="user">
+                    <img src="./img/img-1.jpg" alt="">
+                    <div class="user-info">
+                        <h4>KEN NORMAN <i class="bi bi-twitter"></i></h4>
+                        <small>@kennorman</small>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In iaculis dignissim lacus, non vestibulum velit facilisis in.</p>
+            </div>
+            <div class="testimonial-col">
+                <div class="user">
+                    <img src="./img/img-2.jpg" alt="">
+                    <div class="user-info">
+                        <h4>KARIAN NICK <i class="bi bi-twitter"></i></h4>
+                        <small>@kariannick</small>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In iaculis dignissim lacus, non vestibulum velit facilisis in.</p>
+            </div>
+            <div class="testimonial-col">
+                <div class="user">
+                    <img src="./img/img-3.jpg" alt="">
+                    <div class="user-info">
+                        <h4>DIARA JAMES <i class="bi bi-twitter"></i></h4>
+                        <small>@diarajames</small>
+                    </div>
+                </div>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In iaculis dignissim lacus, non vestibulum velit facilisis in.</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- end Testimonial -->
+
+    <!-- footer -->
+
+    <section id="footer">
+        <img src="./img/footer-img.png" alt="" class="footer-img">
+        <div class="title-text">
+            <p>CONTACT</p>
+            <h1>Visit Shop Today </h1>
+        </div>
+        <div class="footer-row">
+            <div class="footer-left">
+                <h1>Openning Hours</h1>
+                <p><i class="bi bi-clock"></i>Monday to Friday - 9am to 9pm</p>
+                <p><i class="bi bi-clock"></i>Satuday to Sunday - 8am to 11pm</p>
+            </div>
+            <div class="footer-right">
+                <h1>Get In Touch</h1>
+                <p>#30 abc Colony, xyz City IN <i class="bi bi-geo-alt"></i></p>
+                <p>example@website.com <i class="bi bi-paperclip"></i></p>
+                <p>+01 123456789 <i class="bi bi-phone"></i></p>
+            </div>
+        </div>
+        <div class="social-links">
+            <i class="bi bi-facebook"></i>
+            <i class="bi bi-instagram"></i>
+            <i class="bi bi-twitter"></i>
+            <i class="bi bi-youtube"></i>
+            <p>Copyright Easy Tutorials Youtube Chanel</p>
+        </div>
+    </section>
+
+    <!-- end footer -->
+
+    <script>
+        var menuBtn = document.getElementById("menuBtn");
+        var sideNav = document.getElementById("sideNav");
+        var menu = document.getElementById("menu");
+        sideNav.style.right = "-250px";
+        menuBtn.onclick = function() {
+            if (sideNav.style.right == "-250px") {
+                sideNav.style.right = "0";
+                menu.src = "./img/close.png";
+            } else {
+                sideNav.style.right = "-250px";
+                menu.src = "./img/menu.png";
+            }
+        }
+
+        // All animations will take exactly 1000ms
+        var scroll = new SmoothScroll('a[href*="#"]', {
+            speed: 1000,
+            speedAsDuration: true
+        });
+    </script>
 </body>
 
 </html>
