--- a/Bootstrap/Demo/Case_study_2/index.html
+++ b/Bootstrap/Demo/Case_study_2/index.html
@@ -12,14 +12,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
+
 </head>
 
 <body>
     <header>
         <div class="container-fluid p-0">
             <nav class="navbar justify-content-between m-auto">
-                <a class="navbar-brand">Books</a>
-                <ul class="nav justify-content-end right">
+                <a class="navbar-brand text-white"> <i class="fas fa-book-reader fa-2x mx-3"></i> Books</a>
+                <ul class="nav justify-content-end">
                     <li class="nav-item">
                         <a class="nav-link active" href="#">HOME</a>
                     </li>
@@ -30,7 +32,7 @@
                         <a class="nav-link" href="#">PRICE</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">PAGES</a>
+                        <a class="nav-link" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">PAGES</a>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="#">Generic</a>
                             <a class="dropdown-item" href="#">Elements</a>
@@ -47,11 +49,11 @@
         </div>
         <div class="container text-center ">
             <div class="row">
-                <div class="col-md-7 col-sm-12 mt-20">
+                <div class="col-md-7 col-sm-12 text-white">
                     <h6>AUTHOR: DAILY TUITION</h6>
                     <h1>EXCITING ADVENTURE</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Soluta incididunt quis maxiem voluptatibus ex nature. Lorem ipsum dolor sit amet</p>
-                    <button class="btn btn-light">
+                    <button class="btn btn-light primary-btn px-5 py-2">
                         By now for $5.99
                     </button>
                 </div>
@@ -64,7 +66,7 @@
 
     <main>
         <section class="section-1">
-            <div class="container">
+            <div class="container text-center">
                 <div class="row">
                     <div class="col-md-6 col-12">
                         <div class="div"><img src="./assets/pexels-photo-1904769.jpeg" width="100%" alt=""></div>
@@ -82,83 +84,86 @@
         </section>
 
         <section class="section-2 container-fluid p-0">
-            <div>
+            <div class="cover">
                 <div class="content text-center">
                     <h1>Purchase Whatever You Want</h1>
                     <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. </p>
                 </div>
             </div>
             <div class="container-fluid text-center">
-                <div class="d-flex justify-content-center">
-                    <div>
+                <div class="d-flex justify-content-center numbers">
+                    <div class="rect">
                         <h1>2345</h1>
                         <p>Happy Client</p>
                     </div>
-                    <div>
+                    <div class="rect">
                         <h1>6784</h1>
                         <p>Cups Coffee</p>
                     </div>
-                    <div>
+                    <div class="rect">
                         <h1>1056</h1>
                         <p>Tickets Submitted </p>
                     </div>
-                    <div>
+                    <div class="rect">
                         <h1>9152</h1>
                         <p>Total Projects</p>
                     </div>
                 </div>
             </div>
 
-            <div class="text-center">
+            <div class="purchase text-center">
                 <h1>Purchase Whatever You Want</h1>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
 
-                <div class="d-flex flex-row justify-content-center flex-wrap">
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="title">
-                                <h5 class="card-title">PDF</h5>
+                <div class="cards">
+                    <div class="d-flex flex-row justify-content-center flex-wrap">
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="title">
+                                    <h5 class="card-title">PDF</h5>
+                                </div>
+                                <p class="card-text">
+                                    With supporting text below as a natural lead-in.
+                                </p>
+                                <div class="pricing">
+                                    <h1>$77.99</h1>
+                                    <a href="#" class="btn btn-dark py-2 px-5 mb-5 primary-btn">Purchase Now</a>
+                                </div>
                             </div>
                         </div>
-                        <p class="card-text">
-                            With supporting text below as a natural lead-in.
-                        </p>
-                        <div class="pricing">
-                            <h1>$77.99</h1>
-                            <a href="#" class="btn btn-dark py-2">Purchase Now</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="title">
-                                <h5 class="card-title">PDF</h5>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="title">
+                                    <h5 class="card-title">E-book</h5>
+                                </div>
+                                <p class="card-text">
+                                    With supporting text below as a natural lead-in.
+                                </p>
+                                <div class="pricing">
+                                    <h1>$99.99</h1>
+                                    <a href="#" class="btn btn-dark py-2 px-5 mb-5 primary-btn">Purchase Now</a>
+                                </div>
                             </div>
                         </div>
-                        <p class="card-text">
-                            With supporting text below as a natural lead-in.
-                        </p>
-                        <div class="pricing">
-                            <h1>$77.99</h1>
-                            <a href="#" class="btn btn-dark py-2">Purchase Now</a>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-body">
-                            <div class="title">
-                                <h5 class="card-title">PDF</h5>
+                        <div class="card">
+                            <div class="card-body">
+                                <div class="title">
+                                    <h5 class="card-title">Print Copy</h5>
+                                </div>
+                                <p class="card-text">
+                                    With supporting text below as a natural lead-in.
+                                </p>
+                                <div class="pricing">
+                                    <h1>$58.99</h1>
+                                    <a href="#" class="btn btn-dark py-2 px-5 mb-5 primary-btn">Purchase Now</a>
+                                </div>
                             </div>
-                        </div>
-                        <p class="card-text">
-                            With supporting text below as a natural lead-in.
-                        </p>
-                        <div class="pricing">
-                            <h1>$77.99</h1>
-                            <a href="#" class="btn btn-dark py-2">Purchase Now</a>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+
         <section class="section-3 container-fluid text-center p-0">
             <div class="row">
                 <div class="col-md-12 col-sm-12">
@@ -167,7 +172,7 @@
                         eaque nostrum nobis voluptatum</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="platform row">
                 <div class="col-md-6 col-sm-12 text-right">
                     <div class="desktop shadow-lg">
                         <div class="d-flex flex-row justify-content-center">
@@ -179,7 +184,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 text-right">
+                <div class="col-md-6 col-sm-12 text-left">
                     <div class="desktop shadow-lg">
                         <div class="d-flex flex-row justify-content-center">
                             <i class="fas fa-mobile-alt fa-3x py-2 pr-3"></i>
@@ -192,8 +197,110 @@
                 </div>
             </div>
         </section>
+        <section class="section-4">
+            <div class="container text-center">
+                <h1>What our Reader's Say about us</h1>
+                <p>What our Reader's Say about us</p>
+            </div>
+            <div class="team row">
+                <div class="col-md-4 col-12 text-center">
+                    <div class="card mr-2 d-inline-block shadow-lg">
+                        <div class="card-img-top">
+                            <img src="./assets/UI-face-3.jpg " class="img-fluid border-radius w-50 p-4" alt="">
+                        </div>
+                        <div class="card-body ">
+                            <h3 class="card-title">Blalock Jolene</h3>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae, veniam, illo dolor soluta assumenda minima quia velit officia sit exercitationem nam ipsa, repellendus aut facilis quasi voluptas!</p>
+                            <a href="#" class="text-secondary text-decoration-none">Go somewhere</a>
+                            <p class="text-secondary">CEO at Google</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-12 text-center">
+                    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="card mr-2 d-inline-block shadow-lg">
+                                    <div class="card-img-top">
+                                        <img src="./assets/UI-face-1.jpg" class="img-fluid border-radius w-50 p-4" alt="">
+                                    </div>
+                                    <div class="card-body ">
+                                        <h3 class="card-title">Allen Agnes</h3>
+                                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae, veniam, illo dolor soluta assumenda minima quia velit officia sit exercitationem nam ipsa, repellendus aut facilis quasi voluptas!</p>
+                                        <a href="#" class="text-secondary text-decoration-none">Go somewhere</a>
+                                        <p class="text-secondary">CEO at Google</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="card mr-2 d-inline-block shadow-lg">
+                                    <div class="card-img-top">
+                                        <img src="./assets/UI-face-2.jpg" class="img-fluid border-radius w-50 p-4" alt="">
+                                    </div>
+                                    <div class="card-body ">
+                                        <h3 class="card-title">Amiel Barbara</h3>
+                                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae, veniam, illo dolor soluta assumenda minima quia velit officia sit exercitationem nam ipsa, repellendus aut facilis quasi voluptas!</p>
+                                        <a href="#" class="text-secondary text-decoration-none">Go somewhere</a>
+                                        <p class="text-secondary">CEO at Google</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-12 text-center">
+                    <div class="card mr-2 d-inline-block shadow-lg">
+                        <div class="card-img-top">
+                            <img src="./assets/UI-face-4.jpg" class="img-fluid border-radius w-50 p-4" alt="">
+                        </div>
+                        <div class="card-body ">
+                            <h3 class="card-title">Blalock Jolene</h3>
+                            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint iure autem recusandae, veniam, illo dolor soluta assumenda minima quia velit officia sit exercitationem nam ipsa, repellendus aut facilis quasi voluptas!</p>
+                            <a href="#" class="text-secondary text-decoration-none">Go somewhere</a>
+                            <p class="text-secondary">CEO at Google</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
-
+    <footer>
+        <div class="container-fluid p-0">
+            <div class="row">
+                <div class="col-md-5 col-sm-5">
+                    <h1>About us</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Earum maxime ea similique illum corrupti</p>
+                    <p>Copyright ©2019 All rights reserved | This template is made with by <span>Daily Tuition</span></p>
+                </div>
+                <div class="col-md-5 col-sm-12">
+                    <h4 class="text-light">Newsletter</h4>
+                    <p class="text-muted">Stay Updated</p>
+                    <form action="#" class="form-inline">
+                        <div class="pl-0">
+                            <div class="input-group">
+                                <input type="text" class="form-control bg-dark text-white" placeholder="Email">
+                                <div class="input-group-prepend">
+                                    <div class="input-group-text">
+                                        <i class="fas fa-arrow-right"></i>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-2 col-sm-12">
+                    <h4 class="text-light">Follow Us</h4>
+                    <p>Let us be social</p>
+                    <div class="text-muted">
+                        <i class="fab fa-facebook-f"></i>
+                        <i class="fab fa-instagram"></i>
+                        <i class="fab fa-twitter"></i>
+                        <i class="fab fa-youtube"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
