add "practice create basic form"

--- a/Bootstrap/Demo/Case_study_2/index.html
+++ b/Bootstrap/Demo/Case_study_2/index.html
@@ -17,6 +17,7 @@
 </head>
 
 <body>
+    <!-- header  -->
     <header>
         <div class="container-fluid p-0">
             <nav class="navbar justify-content-between m-auto">
@@ -64,6 +65,7 @@
         </div>
     </header>
 
+    <!-- main -->
     <main>
         <section class="section-1">
             <div class="container text-center">
@@ -264,6 +266,8 @@
             </div>
         </section>
     </main>
+
+    <!-- footer -->
     <footer>
         <div class="container-fluid p-0">
             <div class="row">
