--- a/form_table/tao_form_co_ban/index.html
+++ b/form_table/tao_form_co_ban/index.html
@@ -5,29 +5,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tạo form cơ bả<nav></nav>
-    </title>
+    <title>Tạo form cơ bản </title>
+    <style>
+        div {
+            font-family: "Lucida Grande", "Lucida Sans Unicode", Tahoma, sans-serif;
+        }
+        
+        select {
+            width: 150px;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>Order Form</h1>
-    <form action="#">
-        <label for="mySelect"><b>What would you like to buy?</b></label><br>
-        <select name="mySelect" id="mySelect">
+    <div style="border: 1px solid #ccc; vertical-align: middle; float:left; box-shadow: 5px 5px 50px #ccc;">
+        <h1>Order Form</h1>
+        <form action="#" method="get">
+            <label for="mySelect"><b>What would you like to buy?</b></label><br>
+            <select name="mySelect" id="mySelect">
             <option value="A">A</option>
             <option value="B">B</option>
             <option value="C">C</option>
-        </select>
-        <p><b>How many would you like to order?</b></p>
-        <input type="radio" id="one" name="range" value="1">
-        <label for="one">1 - $10</label><br>
-        <input type="radio" id="two" name="range" value="2">
-        <label for="two">2 - $20</label><br>
-        <input type="radio" id="three" name="range" value="3">
-        <label for="three">1 - $30</label><br>
-        <p><strong>Name</strong></p>
-    </form>
-     
+           </select>
+            <p><b>How many would you like to order?</b></p>
+            <input type="radio" id="one" name="range" value="1">
+            <label for="one">1 - $10</label><br>
+            <input type="radio" id="two" name="range" value="2">
+            <label for="two">2 - $20</label><br>
+            <input type="radio" id="three" name="range" value="3">
+            <label for="three">1 - $30</label><br>
+            <p><strong>Name</strong>&nbsp;<span style="color:red">*</span></p>
+            <input type="text" name="firstName" placeholder="First Name"> &nbsp;
+            <input type="text" name="lastName" placeholder="Last Name">
+            <p><strong>Email</strong>&nbsp;<span style="color:red">*</span></p>
+            <input type="text" name="email" placeholder="Email">
+            <p><strong>Email</strong>&nbsp;<span style="color:red">*</span></p>
+            <input type="text" name="email" placeholder="Email">
+            <p><strong>Phone Number</strong></p>
+            <input type="text" name="phone1" size="5" /> -
+            <input type="text" name="phone2" size="5" /> -
+            <input type="text" name="phone3" size="5" />
+            <p><input type="button" name="btSubmit" value="Submit" /></p>
+        </form>
+
+    </div>
+
+
 </body>
 
 </html>
