update "survey khách hàng"

--- a/form_table/Exercise/Lay_survey_khach_hang/index.html
+++ b/form_table/Exercise/Lay_survey_khach_hang/index.html
@@ -189,7 +189,7 @@
                 </table>
             </div>
         </div>
-
+        <button type="submit">Submit</button>
     </form>
 </body>
 
