--- a/CSS RWD/Exercise/Tạo gallery đơn giản sử dụng RWD/index.html
+++ b/CSS RWD/Exercise/Tạo gallery đơn giản sử dụng RWD/index.html
@@ -41,10 +41,10 @@
 </head>
 
 <body>
-    <div><img src="/Build_website_with_html_css/CSS RWD/Demo/Img/img_fjords.jpg" alt=""></div>
-    <div><img src="/Build_website_with_html_css/CSS RWD/Demo/Img/img_fjords.jpg" alt=""></div>
-    <div><img src="/Build_website_with_html_css/CSS RWD/Demo/Img/img_fjords.jpg" alt=""></div>
-    <div><img src="/Build_website_with_html_css/CSS RWD/Demo/Img/img_fjords.jpg" alt=""></div>
+    <div><img src="/Build_website_with_html_css/CSS RWD/Exercise/Tạo gallery đơn giản sử dụng RWD/Img/img_fjords.jpg" alt=""></div>
+    <div><img src="/Build_website_with_html_css/CSS RWD/Exercise/Tạo gallery đơn giản sử dụng RWD/Img/img_fjords.jpg" alt=""></div>
+    <div><img src="/Build_website_with_html_css/CSS RWD/Exercise/Tạo gallery đơn giản sử dụng RWD/Img/img_fjords.jpg" alt=""></div>
+    <div><img src="/Build_website_with_html_css/CSS RWD/Exercise/Tạo gallery đơn giản sử dụng RWD/Img/img_fjords.jpg" alt=""></div>
 </body>
 
 </html>
